force-app/main/default/objects/SalesHeader__c/SalesHeader__c.object-meta.xml
<CustomObject>
    <description>This object contains Sales Orders from MS Dynamics ERP system. Normally this would just be for information - not something that you should create or edit in SFDC.</description>
    <label>Blanket Order</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blanket Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>