force-app/main/default/objects/SalesHeader__c/fields/AXID__c.field-meta.xml
<CustomField>
    <fullName>AXID__c</fullName>
    <label>AXID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>