force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <label>Bill-to Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>