force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_No__c</fullName>
    <label>Bill-to Contact No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>