force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Country__c</fullName>
    <label>Bill-to Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>