force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>