force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Customer_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer_Template_Code__c</fullName>
    <label>Bill-to Customer Template Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>