force-app/main/default/objects/SalesHeader__c/fields/Bill_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Street__c</fullName>
    <label>Bill-to Street</label>
    <type>TextArea</type>
</CustomField>