force-app/main/default/objects/SalesHeader__c/fields/Completely_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Completely_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completely Shipped</label>
    <type>Checkbox</type>
</CustomField>