force-app/main/default/objects/SalesHeader__c/fields/Currency_Factor__c.field-meta.xml
<CustomField>
    <fullName>Currency_Factor__c</fullName>
    <description>Currency Factor from the ERP system. Can be used to calculate Total Amount in local currency.</description>
    <label>Currency Factor</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>