force-app/main/default/objects/SalesHeader__c/fields/Dimension1_Code__c.field-meta.xml
<CustomField>
    <fullName>Dimension1_Code__c</fullName>
    <label>Dimension1 Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>