force-app/main/default/objects/SalesHeader__c/fields/Document_Type_No__c.field-meta.xml
<CustomField>
    <fullName>Document_Type_No__c</fullName>
    <description>Document Type as number (used when deleting Sales Orders)</description>
    <label>Document Type No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>