force-app/main/default/objects/SalesHeader__c/fields/Salesperson_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Name__c</fullName>
    <label>Salesperson Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>