force-app/main/default/objects/SalesHeader__c/fields/Sell_to_City__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_City__c</fullName>
    <label>Sell-to City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>