force-app/main/default/objects/SalesHeader__c/fields/Sell_to_Country__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Country__c</fullName>
    <label>Sell-to Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>