force-app/main/default/objects/SalesHeader__c/fields/Sell_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sell-to Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>