force-app/main/default/objects/SalesHeader__c/fields/Sell_to_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Postal_Code__c</fullName>
    <label>Sell-to Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>