force-app/main/default/objects/SalesHeader__c/fields/Sell_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Sell_to_Street__c</fullName>
    <label>Sell-to Street</label>
    <type>TextArea</type>
</CustomField>