force-app/main/default/objects/SalesHeader__c/fields/Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Contact__c</fullName>
    <label>Ship-to Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>