force-app/main/default/objects/SalesHeader__c/fields/Ship_to_Name2__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name2__c</fullName>
    <label>Ship-to Name2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>