force-app/main/default/objects/SalesHeader__c/fields/Ship_to_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Street__c</fullName>
    <label>Ship-to Street</label>
    <type>TextArea</type>
</CustomField>