force-app/main/default/objects/SalesHeader__c/fields/Shipping_Time__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Time__c</fullName>
    <label>Shipping Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>