force-app/main/default/objects/SalesHeader__c/fields/Tax_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area_Code__c</fullName>
    <label>Tax Area Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>