force-app/main/default/objects/SalesHeader__c/fields/Total_Amount_Incl_VAT_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Incl_VAT_Sum__c</fullName>
    <description>Sum of Amount including VAT on the Sales Lines. Use this field if the Total Amount Including VAT is not available on the Sales Header in the ERP system.</description>
    <label>Total Amount Incl. VAT</label>
    <summarizedField>SalesLine__c.Amount_Including_VAT__c</summarizedField>
    <summaryForeignKey>SalesLine__c.Sales_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>