force-app/main/default/objects/SalesHeader__c/fields/Total_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_LCY__c</fullName>
    <label>Total Amount LCY</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>