force-app/main/default/objects/SalesHeader__c/fields/Total_Amount_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Sum__c</fullName>
    <description>Sum of Amount field for all the Sales Lines. Use this field if the Total Amount field cannot be transferred from the Sales Header (when it is not available in the ERP system).</description>
    <label>Total Amount</label>
    <summarizedField>SalesLine__c.Amount__c</summarizedField>
    <summaryForeignKey>SalesLine__c.Sales_Header__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>